# bioinformatikk

./: README.md  analyzing.py  helper_functions.py  main.py  predictions.csv  predictions.txt  pyproject.toml  tree.py
