[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["ingval <ingvild.almasbakk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ucimlrepo = "^0.0.6"
pandas = "^2.2.2"
certifi = "^2024.2.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
